--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inversur</title>
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#2c2c2c">
     <script src="https://accounts.google.com/gsi/client" async></script>
-</head>
-<body>
+  </head>
+  <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
     <script>
         // Check display mode and initialize
         if (window.matchMedia('(display-mode: standalone)').matches) {
@@ -35,5 +36,5 @@
             });
         }
     </script>
-</body>
+  </body>
 </html>
