--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
     <script>
         // Check display mode and initialize
         if (window.matchMedia('(display-mode: standalone)').matches) {
