--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,13 +28,11 @@
         window.addEventListener('unhandledrejection', (event) => {
             alert(`Unhandled promise rejection: ${event.reason.message || event.reason}`);
         });
-
-        // Wait for service worker and Google SDK
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/firebase-messaging-sw.js').then(() => {
-                if (window.google && window.matchMedia('(display-mode: standalone)').matches) {
-                    window.location.reload();
-                }
+        
+        // Force reload if service worker is ready in standalone mode
+        if ('serviceWorker' in navigator && window.matchMedia('(display-mode: standalone)').matches) {
+            navigator.serviceWorker.ready.then(() => {
+                window.location.reload();
             });
         }
     </script>
