--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inversur</title>
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#2c2c2c">
     <script src="https://accounts.google.com/gsi/client" async></script>
-</head>
-<body>
+  </head>
+  <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
     <script>
         // Check display mode and initialize
         if (window.matchMedia('(display-mode: standalone)').matches) {
@@ -28,15 +27,13 @@
         window.addEventListener('unhandledrejection', (event) => {
             alert(`Unhandled promise rejection: ${event.reason.message || event.reason}`);
         });
-
-        // Wait for service worker and Google SDK
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/firebase-messaging-sw.js').then(() => {
-                if (window.google && window.matchMedia('(display-mode: standalone)').matches) {
-                    window.location.reload();
-                }
+        
+        // Force reload if service worker is ready in standalone mode
+        if ('serviceWorker' in navigator && window.matchMedia('(display-mode: standalone)').matches) {
+            navigator.serviceWorker.ready.then(() => {
+                window.location.reload();
             });
         }
     </script>
-</body>
+  </body>
 </html>
