--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,11 @@
     <title>Inversur</title>
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#2c2c2c">
+    <script src="https://accounts.google.com/gsi/client" async></script>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
     <script>
         // Check display mode and initialize
         if (window.matchMedia('(display-mode: standalone)').matches) {
@@ -26,7 +28,7 @@
         window.addEventListener('unhandledrejection', (event) => {
             alert(`Unhandled promise rejection: ${event.reason.message || event.reason}`);
         });
-        
+
         // Force reload if service worker is ready in standalone mode
         if ('serviceWorker' in navigator && window.matchMedia('(display-mode: standalone)').matches) {
             navigator.serviceWorker.ready.then(() => {
