--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,14 +31,14 @@
 
         // Eliminar SWs previos y registrar uno nuevo
         if ('serviceWorker' in navigator) {
-        await navigator.serviceWorker.getRegistrations().then(async (registrations) => {
-            for (let registration of registrations) {
-            await registration.unregister();
-            console.log('Service worker unregistered:', registration);
-            }
-        });
+            navigator.serviceWorker.getRegistrations().then((registrations) => {
+                for (let registration of registrations) {
+                    registration.unregister();
+                    console.log('Service worker unregistered:', registration);
+                }
+            });
 
-        await navigator.serviceWorker.register('/firebase-messaging-sw.js')
+            navigator.serviceWorker.register('/firebase-messaging-sw.js')
             .then(registration => {
             console.log('Nuevo service worker registrado:', registration);
             })
