Prueba login pwa

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,13 +34,13 @@
                 }
             });
 
-            /*navigator.serviceWorker.register('/firebase-messaging-sw.js')
+            navigator.serviceWorker.register('/firebase-messaging-sw.js')
             .then(registration => {
             console.log('Nuevo service worker registrado:', registration);
             })
             .catch(error => {
             console.error('Error al registrar service worker:', error);
-            });*/
+            });
         }
     </script>
   </body>
